syntax = "proto3";

package ru.yandex.cloud.identity;

enum TokenVersion {
    v1 = 0;
    v2 = 1;
}

enum AuthType {
    TOKEN = 0;
    SESSION = 1;
    OAUTH = 2;
    PASSWORD = 3;
    STATIC = 4;
    SERVICE = 5;
}

message Principal {
    // Reserve removed field numbers for backward compatibility
    reserved 3, 4;

    enum Type {
        USER = 0;
        SYSTEM = 1;
        SERVICE = 2;
    }

    string id = 1;
    string name = 2;
    Type type = 6;
    // folder_id is set only for service accounts
    string folder_id = 5;
}

// Describes a scope in which token may be authenticated
message Scope {
    enum Type {
        // Inclusion order: GLOBAL->ORGANIZATION->CLOUD->FOLDER (left includes right)
        GLOBAL = 0;
        CLOUD = 1;
        FOLDER = 2;
        ORGANIZATION = 3;
    }

    string id = 1;
    Type type = 2;
}

message Token {
    // Reserve removed field numbers for backward compatibility
    reserved 5, 8;

    string id = 1;
    int64 issued_at = 2;
    int64 expires_at = 3;
    Principal principal = 4;
    Scope scope = 11;
    AuthType auth_type = 6;
    TokenVersion version = 7;
    ProducingKey producing_key = 9;
    bool disable_signature_check = 10;
}

message SignKey {
    // Reserve removed field numbers for backward compatibility
    reserved 1;

    string id = 3;
    fixed32 alg = 2;
}

message ProducingKey {
    // Reserve removed field numbers for backward compatibility
    reserved 1;

    string id = 3;
    fixed32 alg = 2;
}

message SignedToken {
    SignKey sign_key = 1;
    bytes sign = 2;
    bytes token = 3;
    uint32 size = 4;
}